# k8s-managed-node-pool

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  managed-node-pool-operator-do-0.1.0.tgz
.github/workflows/: charts.yaml  docker-publish.yml  release.yml  test.yaml
charts/managed-node-pool-operator-do/: .helmignore  Chart.yaml  values.yaml
charts/managed-node-pool-operator-do/crds/: managed_node_pool.yaml
charts/managed-node-pool-operator-do/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  secret.yaml
docker/: build_and_push.sh
k8s-managed-node-pool/: Cargo.toml
k8s-managed-node-pool-crdgen/: Cargo.toml
k8s-managed-node-pool-crdgen/src/: main.rs
k8s-managed-node-pool-do/: Cargo.toml
k8s-managed-node-pool-do/src/: digital_ocean.rs  main.rs
k8s-managed-node-pool/src/: client.rs  cloud_provider.rs  lib.rs  model.rs  operator.rs
