[package]
name = "k8s-managed-node-pool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["macros"] }
futures = "0.3.30"
tracing = "0.1.40"
kube = { version = "0.92.0", features = ["derive"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
schemars = "0.8.21"
trait-variant = "0.1.2"
duration-str = "0.11.2"

[dev-dependencies]
mockall = "0.12.1"
